Fri Nov 17 19:00:23 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Removed uneeded macro from quartz_types.h

Fri Nov 17 18:24:29 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Bcursor is now closer to a proper class.  Bcursor_* functions
	  are now just wrappers.  Implementation moved to bcursor.cc

	* Some of the macros, helper functions, and types from btree.cc
	  have moved into separate header files.
	
Fri Nov 17 16:43:50 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Declare this to be version 0.4.0

Fri Nov 17 16:26:52 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Annihilated a small memory leak.

	* Fixed a problem with checking enable_shared.

Fri Nov 17 16:12:42 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Remove tests to check for Berkeley DB 3.1 - we don't use Berkeley
	  DB 3.1.

	* Made quartz compile by default - it now passes the testsuite (well,
	  apart from a small memory leak, but what's a small memory leak
	  between friends?).

Fri Nov 17 15:49:20 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Change an OmUnimplementedError into an OmInvalidOperationError
	  in MSetPostList

Fri Nov 17 15:39:29 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fixes to check key length when searching for a key or adding an
	  item.  If a key which is too long is searched for, it simply
	  will not be found (but cursor operations will find first key
	  before it, as expected).  If an attempt is made to add a key
	  which is too long, an exception will be thrown.

Fri Nov 17 14:37:38 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed a problem with errors opening a database at a particular
	  revision throwing an exception.

Fri Nov 17 14:18:02 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix to Bcursor_find_key() so that it reads the tag correctly when
	  searching for a key which doesn't exist, but the previous item