@@ -1,3 +1,7 @@
+Mon Nov 20 12:56:56 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>
+
+	* Removed mentions of termids from Quartz.
+
 Fri Nov 17 19:00:23 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>
 
 	* Removed uneeded macro from quartz_types.h
